ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: practice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: practice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: practice-service
                port:
                  number: 80
